--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,5 +1,8 @@
-<div class="container">
- <h1>Main Container</h1>
-
-
+<div>
+    <div ui-view="top"></div>
+    <div ui-view="search"></div>
+    <div class="container">
+        <div ui-view></div>
+    </div>
 </div>
+
