intergrating search page

--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -107,7 +107,7 @@ img.full-width { height: auto; }
 .light-blue-color { color: #7692b4; }
 .yellow-color { color: $yellow-theme-color !important; }
 .red-color { color: $red-theme-color !important; }
-.green-color { color: /*$green-theme-color*/#7db921 !important; }
+.green-color { color: #7db921 !important; }/*$green-theme-color*/
 .white-color { color: #fff !important; }
 .dark-blue-color { color: $dark-blue-theme-color !important; }
 .skin-color { color: $skin-active-color; }
