--- a/src/app/style/sass/soap-icon.scss
+++ b/src/app/style/sass/soap-icon.scss
@@ -8,11 +8,11 @@
 /* Icons */
 @font-face {
   font-family: 'soap-icons';
-  src: url('../fonts/soap-icons.eot?26664784');
-  src: url('../fonts/soap-icons.eot?26664784#iefix') format('embedded-opentype'),
-       url('../fonts/soap-icons.woff?26664784') format('woff'),
-       url('../fonts/soap-icons.ttf?26664784') format('truetype'),
-       url('../fonts/soap-icons.svg?26664784#soap-icons') format('svg');
+  src: url('style/fonts/soap-icons.eot?26664784');
+  src: url('style/fonts/soap-icons.eot?26664784#iefix') format('embedded-opentype'),
+       url('style/fonts/soap-icons.woff?26664784') format('woff'),
+       url('style/fonts/soap-icons.ttf?26664784') format('truetype'),
+       url('style/fonts/soap-icons.svg?26664784#soap-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
