--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -12,6 +12,8 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
 // bower:scss
 // endbower
 
+@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
