--- a/src/app/style/sass/_variables.scss
+++ b/src/app/style/sass/_variables.scss
@@ -60,7 +60,7 @@ $green-theme-color: #98ce44;
 $blue-theme-color: #01b7f2;
 $dark-blue-theme-color: #2d3e52;
 $red-theme-color: #e01a33;
-$light-blue-theme-color: #7c9abd;
+$light-blue-theme-color: #D7DCE2;
 
 /* 5. Skin1 (Light Blue) */
 $skin-logo: $skin1-logo;
