home page updated

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h1 class="logo navbar-brand">
             <a href="index.html" title="Travelo - home">
-                <img src="images/logo.png" alt="Travelo HTML5 Template"/>
+                <img src="assets/images/logo.png" alt="Marketplace"/>
             </a>
         </h1>
 
