--- a/src/app/style/sass/_variables.scss
+++ b/src/app/style/sass/_variables.scss
@@ -54,11 +54,11 @@ $skin9-logo: "../images/logo/skin9-logo.png";
 $skin10-logo: "../images/logo/skin10-logo.png";
 
 /* 4. Important colors */
-$yellow-theme-color: #fdb714;
+$yellow-theme-color: #E37F1F;
 $dark-yellow-theme-color: #efa300;
 $green-theme-color: #98ce44;
 $blue-theme-color: #01b7f2;
-$dark-blue-theme-color: #2d3e52;
+$dark-blue-theme-color: #3E3E3E;
 $red-theme-color: #e01a33;
 $light-blue-theme-color: #D7DCE2;
 
