--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -22,7 +22,7 @@
 <div class="container">
     <h1 class="logo navbar-brand">
         <a href="index.html" title="Travelo - home">
-            <img src="images/logo.png" alt="Travelo HTML5 Template"/>
+            <img src="assets/images/logo.png" alt="Marketplace"/>
         </a>
     </h1>
 
@@ -40,25 +40,7 @@
     <div class="flexslider">
         <ul class="slides">
             <li>
-                <div class="slidebg" style="background-image: url('http://placehold.it/2080x1214');"></div>
-            </li>
-            <li>
-                <div class="slidebg" style="background-image: url('http://placehold.it/2080x1214');"></div>
-            </li>
-            <li>
-                <div class="slidebg" style="background-image: url('http://placehold.it/2080x1214');"></div>
-            </li>
-            <li>
-                <div class="slidebg" style="background-image: url('http://placehold.it/2080x1214');"></div>
-            </li>
-            <li>
-                <div class="slidebg" style="background-image: url('http://placehold.it/2080x1214');"></div>
-            </li>
-            <li>
-                <div class="slidebg" style="background-image: url('http://placehold.it/2080x1214');"></div>
-            </li>
-            <li>
-                <div class="slidebg" style="background-image: url('http://placehold.it/2080x1214');"></div>
+                <div class="slidebg" style="background-image: url('../assets/images/bg.jpg');"></div>
             </li>
         </ul>
     </div>
@@ -66,22 +48,22 @@
 
 <div class="container">
 <div id="main">
-<h1 class="page-title">Rent Equipments with us in Comfort !</h1>
+<h1 class="page-title white-color">Rent Equipments with us in Comfort !</h1>
 
-<h2 class="page-description col-md-6 no-float no-padding">We're bringing you a modern, comfortable and easy way
+<h2 class="page-description col-md-6 no-float no-padding white-color">We're bringing you a modern, comfortable and easy way
     to rent, buy and sell equipments online.</h2>
 
 <div class="search-box-wrapper style2">
 <div class="search-box">
 <ul class="search-tabs clearfix">
-    <li ng-class="{'active':mdl.tab=='rent'}">
+    <li ng-class="{'active':mdl.tab=='rent'}" class="advanced-search">
         <a ng-click="mdl.tab='rent'" data-toggle="tab">
-            <i class="soap-icon-hotel"></i><span>RENT</span>
+            <i class="soap-icon-shopping-3"></i><span>RENT</span>
         </a>
     </li>
-    <li ng-class="{'active':mdl.tab=='buy'}">
+    <li ng-class="{'active':mdl.tab=='buy'}" class="advanced-search">
         <a ng-click="mdl.tab='buy'" data-toggle="tab">
-            <i class="soap-icon-plane-right takeoff-effect"></i><span>BUY</span>
+            <i class="soap-icon-shopping-1 takeoff-effect"></i><span>BUY</span>
         </a>
     </li>
     <li ng-class="{'active':mdl.tab=='search'}" class="advanced-search visible-lg">
@@ -193,14 +175,14 @@
         <div class="container">
             <div class="logo pull-left">
                 <a  title="Travelo - home">
-                    <img src="images/logo.png" alt="Travelo HTML5 Template">
+                    <img src="../assets/images/logo.png" alt="Marketplace">
                 </a>
             </div>
             <div class="pull-right">
                 <a id="back-to-top"  class="animated bounce" data-animation-type="bounce" style="animation-duration: 1s; -webkit-animation-duration: 1s; visibility: visible;"><i class="soap-icon-longarrow-up circle"></i></a>
             </div>
             <div class="copyright pull-right">
-                <p>© 2014 Travelo</p>
+                <p>© 2015 Marketplace</p>
             </div>
         </div>
     </div>
