--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -163,7 +163,7 @@
   }
 }
 section#content {
-  min-height: 700px; padding-top: 90px; text-align: left; background: #f5f5f5; margin-top: -78px;
+  min-height: 700px; padding-top: 90px; text-align: left; background: #f5f5f5;
   &:after { display: table; content: ""; clear: both; }
 }
 .sm-section { padding-top: 30px; padding-bottom: 20px; }
