API integration for singup..

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -35,3 +35,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
  */
 // injector
 // endinjector
+
+.error{
+  color:red;
+}
