--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -150,12 +150,10 @@
                 <div class="form-group col-md-3">
                     <div class="row">
                         <div class="col-xs-6">
-                            <div class="selector">
-                                <select class="full-width">
-                                    <option value="rent">Rent</option>
-                                    <option value="buy">Buy</option>
-                                </select>
-                            </div>
+                            <select class="form-control full-width white-bg">
+                                <option>Rent</option>
+                                <option>Buy</option>
+                            </select>
                         </div>
 
                         <div class="col-xs-6">
