login api integration

--- a/src/app/views/sign-up/sign-up.html
+++ b/src/app/views/sign-up/sign-up.html
@@ -49,5 +49,5 @@
         </form>
     </div>
     <div class="seperator"></div>
-    <p>Already a Travelo member? <a class="goto-login soap-popupbox" ng-click="cancel()">Login</a></p>
+    <p>Already a Travelo member? <a class="goto-login soap-popupbox" ng-click="signUpMdl.login()">Login</a></p>
 </div>
