--- a/src/app/views/login/login.html
+++ b/src/app/views/login/login.html
@@ -4,12 +4,12 @@
         <a  class="button login-googleplus"><i class="soap-icon-googleplus"></i>Login with Google+</a>
     </div>
     <div class="seperator"><label>OR</label></div>
-    <form>
+    <form validate-form name="loginMdl.form" novalidate ng-submit="login()">
         <div class="form-group">
-            <input type="text" class="input-text full-width" placeholder="email address">
+            <input type="text" name="email" ng-model="loginMdl.data.username" required class="input-text full-width" placeholder="email address">
         </div>
         <div class="form-group">
-            <input type="password" class="input-text full-width" placeholder="password">
+            <input type="password" name="password" ng-model="loginMdl.data.password" required class="input-text full-width" placeholder="password">
         </div>
         <div class="form-group">
             <a class="forgot-password pull-right">Forgot password?</a>
@@ -19,7 +19,8 @@
                 </label>
             </div>
         </div>
+        <button type="submit" class="full-width btn-medium" ng-click="loginMdl.login()">Login</button>
     </form>
     <div class="seperator"></div>
-    <p>Don't have an account? <a class="goto-signup soap-popupbox">Sign up</a></p>
+    <p>Don't have an account? <a class="goto-signup soap-popupbox" ng-click="loginMdl.signUp()">Sign up</a></p>
 </div>
