search api integratoin

--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -86,7 +86,7 @@
                 <div class="form-group col-md-2">
                     <div class="row">
                         <div class="col-xs-12">
-                            <button type="submit" class="full-width">SEARCH NOW</button>
+                            <button type="submit" class="full-width" ui-sref="main.search">SEARCH NOW</button>
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="form-group col-md-2">
                     <div class="row">
                         <div class="col-xs-12">
-                            <button type="submit" class="full-width">SEARCH NOW</button>
+                            <button type="submit" class="full-width" ui-sref="main.search">SEARCH NOW</button>
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                         </div>
 
                         <div class="col-xs-6">
-                            <button type="submit" class="full-width">SEARCH NOW</button>
+                            <button type="submit" ui-sref="main.search" class="full-width">SEARCH NOW</button>
                         </div>
                     </div>
                 </div>
