search result CSS updates

--- a/src/app/style/sass/_variables.scss
+++ b/src/app/style/sass/_variables.scss
@@ -27,10 +27,10 @@
 $font-stack:    'Lato', Arial, Helvetica, sans-serif;
 $primary-color: #838383;
 $heading-color: #2d3e52;
-$button-color: #98ce44;
+$button-color: #E37F1F;
 
 /* 2. Skin colors */
-$light-blue-color: #01b7f2;
+$light-blue-color: #E37F1F;
 $purple-color: #9f60b5;
 $orange-color: #ff6000;
 $light-orange-color: #f5a77d;
@@ -56,7 +56,7 @@ $skin10-logo: "../images/logo/skin10-logo.png";
 /* 4. Important colors */
 $yellow-theme-color: #E37F1F;
 $dark-yellow-theme-color: #efa300;
-$green-theme-color: #98ce44;
+$green-theme-color: #E37F1F;
 $blue-theme-color: #01b7f2;
 $dark-blue-theme-color: #3E3E3E;
 $red-theme-color: #e01a33;
