--- a/src/app/views/search/search.html
+++ b/src/app/views/search/search.html
@@ -180,7 +180,7 @@
                                 <a ng-click="searchMdl.display='grid'"><i class="soap-icon-grid"></i></a>
                             </li>
                             <li class="swap-block" ng-class="{'active':searchMdl.display=='map'}">
-                                <a ng-click="searchMdl.display='map'"><i class="soap-icon-block"></i></a>
+                                <a ng-click="searchMdl.display='map'"><i class="soap-icon-departure"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -193,12 +193,12 @@
                                 <div>
                                     <div>
                                         <h4 class="box-title">Caterpillar Track Excavator 330CL<small><i class="soap-icon-departure yellow-color"></i> Nobleiron HQ, Houston</small></h4>
-                                        <div class="amenities">
+                                        <!--<div class="amenities">
                                             <i class="soap-icon-wifi circle"></i>
                                             <i class="soap-icon-fitnessfacility circle"></i>
                                             <i class="soap-icon-fork circle"></i>
                                             <i class="soap-icon-television circle"></i>
-                                        </div>
+                                        </div>-->
                                     </div>
                                     <div>
                                         <div class="five-stars-container">
@@ -208,10 +208,15 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <p>Nunc cursus libero purus ac congue ar lorem cursus ut sed vitae pulvinar massa idend porta nequetiam elerisque mi id, consectetur adipi deese cing elit maus fringilla bibe endum.</p>
-                                    <div>
+                                    <div class="price-slot">
                                         <span class="price"><small>Daily</small>$620</span>
+                                        <span class="price"><small>Weekly</small>$620</span>
+                                        <span class="price"><small>Monthly</small>$620</span>
+                                    </div>
+                                    <div>
+
                                         <a class="button btn-small full-width text-center" title="">Reserve</a>
+                                        <a class="button btn-small full-width text-center" title="">Locate <Map></Map></a>
                                     </div>
                                 </div>
                             </div>
