--- a/src/app/components/header2/header2.html
+++ b/src/app/components/header2/header2.html
@@ -9,44 +9,10 @@
                 </ul>
             </nav>
             <ul class="quick-menu pull-right clearfix">
-                <li class="ribbon">
-                    <a href="#">English</a>
-                    <ul class="menu mini">
-                        <li><a href="#" title="Dansk">Dansk</a></li>
-                        <li><a href="#" title="Deutsch">Deutsch</a></li>
-                        <li class="active"><a href="#" title="English">English</a></li>
-                        <li><a href="#" title="Español">Español</a></li>
-                        <li><a href="#" title="Français">Français</a></li>
-                        <li><a href="#" title="Italiano">Italiano</a></li>
-                        <li><a href="#" title="Magyar">Magyar</a></li>
-                        <li><a href="#" title="Nederlands">Nederlands</a></li>
-                        <li><a href="#" title="Norsk">Norsk</a></li>
-                        <li><a href="#" title="Polski">Polski</a></li>
-                        <li><a href="#" title="Português">Português</a></li>
-                        <li><a href="#" title="Suomi">Suomi</a></li>
-                        <li><a href="#" title="Svenska">Svenska</a></li>
-                    </ul>
+                <li>
+                    <a href="#">CART(3 items)</a>
                 </li>
-                <li class="ribbon currency">
-                    <a href="#" title="">USD</a>
-                    <ul class="menu mini">
-                        <li><a href="#" title="AUD">AUD</a></li>
-                        <li><a href="#" title="BRL">BRL</a></li>
-                        <li class="active"><a href="#" title="USD">USD</a></li>
-                        <li><a href="#" title="CAD">CAD</a></li>
-                        <li><a href="#" title="CHF">CHF</a></li>
-                        <li><a href="#" title="CNY">CNY</a></li>
-                        <li><a href="#" title="CZK">CZK</a></li>
-                        <li><a href="#" title="DKK">DKK</a></li>
-                        <li><a href="#" title="EUR">EUR</a></li>
-                        <li><a href="#" title="GBP">GBP</a></li>
-                        <li><a href="#" title="HKD">HKD</a></li>
-                        <li><a href="#" title="HUF">HUF</a></li>
-                        <li><a href="#" title="IDR">IDR</a></li>
-                    </ul>
-                </li>
-
-                <li><a  ng-click="openSignUp()" class="soap-popupbox">ACCOUNT</a></li>
+                <li><a ng-click="openSignUp()" class="soap-popupbox">ACCOUNT</a></li>
 
             </ul>
         </div>
