--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -163,7 +163,7 @@
   }
 }
 section#content {
-  min-height: 700px; padding-top: 90px; text-align: left; background: #f5f5f5;
+  min-height: 700px; /*padding-top: 90px;*/ text-align: left; background: #f5f5f5;
   &:after { display: table; content: ""; clear: both; }
 }
 .sm-section { padding-top: 30px; padding-bottom: 20px; }
@@ -313,7 +313,7 @@ button, a.button {
 }
 button {
   font-size: 0.9167em; font-weight: bold; background: $button-color; height: 34px; line-height: 34px;
-  &:hover { background: #7fb231; }
+  &:hover { background: #E37F1F; }
 }
 a.button {
   display: inline-block; background: #d9d9d9; font-size: 0.8333em; line-height: 1.8333em; white-space: nowrap; text-align: center;
@@ -336,7 +336,7 @@ button, a.button {
   &.dark-blue1 { background: $dark-blue-theme-color; }
   &.green {
     background: $green-theme-color;
-    &:hover { background: #7fb231; }
+    &:hover { background: #E37F1F; }
   }
   &.red { background: #e44049; }
   &.light-brown { background: #e6c687; }
@@ -389,7 +389,7 @@ button, a.button {
 
 .icon-check {
   position: relative; padding-right: 30px !important; padding-left: 0 !important; overflow: hidden;
-  &:after { content: ""; position: absolute; top: 0; right: 0; width: 30px; height: 100%; background: url(../images/icon/icon-check.png) no-repeat center center #7db921; }
+  &:after { content: ""; position: absolute; top: 0; right: 0; width: 30px; height: 100%; background: url(../images/icon/icon-check.png) no-repeat center center #E37F1F; }
   /*&:hover:after { @include animation(toTopFromBottom, 0.35s, forwards); }*/
   &:hover:after { background-color: $green-theme-color; }
 }
@@ -580,13 +580,13 @@ blockquote {
 
 /* 2.2.11. Price section */
 .price {
-  color: #7db921; font-size: 1.6667em; text-transform: uppercase; float: right; text-align: right; line-height: 1; display: block;
+  color: #E37F1F; font-size: 1.6667em; text-transform: uppercase; float: right; text-align: right; line-height: 1; display: block;
   small { display: block; color: $primary-color; font-size: 0.5em; }
 }
 
 .price-wrapper {
   font-weight: normal; text-transform: uppercase; font-size: 0.8333em; color: inherit; line-height: 1.3333em; margin: 0;
-  .price-per-unit { color: #7db921; font-size: 1.4em; padding-right: 5px; }
+  .price-per-unit { color: #E37F1F; font-size: 1.4em; padding-right: 5px; }
 }
 
 /* 2.2.12. Time section */
@@ -2106,7 +2106,7 @@ body.pace-running {  }
 #header {
   position: relative; z-index: 999;
   .topnav { 
-    height: 30px; background: $skin-bg-color; width: 100%; opacity: 0.7;
+    height: 30px; background: $skin-bg-color; width: 100%;
     ul.quick-menu > li { 
       float: left; margin-left: 20px; 
       &:first-child { margin-left: 0; }
@@ -2188,8 +2188,8 @@ body.pace-running {  }
   &.style2 {
     z-index: 99;
     .topnav {
-      height: auto; background: $dark-blue-theme-color; opacity: 0.7;
-      ul.quick-menu > li { 
+      height: auto; background: $dark-blue-theme-color;
+      ul.quick-menu > li {
         > a {
           color: #ffffff; height: 50px; line-height: 50px;
           &:hover { color: #fff; }
@@ -4973,3 +4973,10 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
 
 /* revolution slider fix */
 .tp-simpleresponsive .slotholder, .tp-simpleresponsive .slotholder img { /*-webkit-backface-visibility: visible !important;-webkit-transform:none !important;*/ }
+
+/* custom style begins */
+.price-slot span.price{
+  float: left;
+  margin:15px;
+}
+/* custom style ends*/
