--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -1,5 +1,5 @@
 <header id="header" class="navbar-static-top style2">
-<div class="topnav">
+<div class="topnav" style="opacity: 0.7;">
     <div class="container">
         <nav id="main-menu" role="navigation">
             <ul class="menu">
@@ -29,7 +29,7 @@
     <div class="header-search col-sm-offset-4 col-md-offset-2 hidden-mobile">
 
     </div>
-</div>
+    </div>
 
 
 </div>
