--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -4979,4 +4979,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
   float: left;
   margin:15px;
 }
+.pointerhover {
+  cursor: pointer;
+}
 /* custom style ends*/
