--- a/src/app/views/search/search.html
+++ b/src/app/views/search/search.html
@@ -11,7 +11,7 @@
 </div>
 <section id="content">
     <div class="container">
-        <div id="main">
+        <div id="main" style="margin-top: 45px;">
             <div class="row">
                 <div class="col-sm-4 col-md-3">
                     <h4 class="search-results-title"><i class="soap-icon-search"></i><b>1,984</b> results found.</h4>
@@ -218,7 +218,7 @@
                                     <div>
 
                                         <a class="button btn-small full-width text-center" title="">Reserve</a>
-                                        <a class="button btn-small full-width text-center" title="">Locate <Map></Map></a>
+                                        <a class="button btn-small full-width text-center" title="">View on Map <Map></Map></a>
                                     </div>
                                 </div>
                             </div>
@@ -234,13 +234,14 @@
                                 </a>
                             </figure>
                             <div class="details">
-                                <span class="price"><small>Daily</small>{{pro.daily_price}}</span>
                                 <h4 class="box-title">{{pro.name}}</h4>
                                 <div class="feedback">
                                     <div data-placement="bottom" data-toggle="tooltip" class="five-stars-container" title="4 stars"><span style="width: 80%;" class="five-stars"></span></div>
                                     <span class="review">170 reviews</span>
                                 </div>
-                                <p class="description">{{pro.description}}</p>
+                                <span class="price"><small>Daily</small>${{pro.daily_price| number : 0}}</span>
+                                <span class="price"><small>Weekly</small>${{pro.weekly_price | number : 0}}</span>
+                                <span class="price"><small>Monthly</small>${{pro.monthly_price | number : 0}}</span>
                                 <div class="action">
                                     <a class="button btn-small" href="hotel-detailed.html">SELECT</a>
                                     <a class="button btn-small yellow popup-map" href="#" data-box="37.089072, -8.247880">VIEW ON MAP</a>
