minor changes for search

--- a/src/app/components/header2/header2.html
+++ b/src/app/components/header2/header2.html
@@ -4,7 +4,7 @@
             <nav id="main-menu" role="navigation">
                 <ul class="menu">
                     <li class="menu-item-has-children">
-                        <a href="index.html">Home</a>
+                        <a ui-sref="home">Home</a>
                     </li>
                 </ul>
             </nav>
