--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -80,13 +80,13 @@
             <div class="row">
                 <div class="form-group col-sm-12 col-md-10">
                     <input type="text" class="input-text full-width"
-                           placeholder="Equipment Name, Part Name, etc.."/>
+                           placeholder="Equipment Name, Part Name, etc.." ng-model="mdl.searchText"/>
                 </div>
 
                 <div class="form-group col-md-2">
                     <div class="row">
                         <div class="col-xs-12">
-                            <button type="submit" class="full-width" ui-sref="main.search">SEARCH NOW</button>
+                            <button type="submit" class="full-width" ng-click="mdl.search()">SEARCH NOW</button>
                         </div>
                     </div>
                 </div>
@@ -100,13 +100,13 @@
             <div class="row">
                 <div class="form-group col-sm-12 col-md-10">
                     <input type="text" class="input-text full-width"
-                           placeholder="Equipment Name, Part Name, etc.."/>
+                           placeholder="Equipment Name, Part Name, etc.." ng-model="mdl.searchText"/>
                 </div>
 
                 <div class="form-group col-md-2">
                     <div class="row">
                         <div class="col-xs-12">
-                            <button type="submit" class="full-width" ui-sref="main.search">SEARCH NOW</button>
+                            <button type="submit" class="full-width" ng-click="mdl.search()">SEARCH NOW</button>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
 
             <div class="row">
                 <div class="form-group col-sm-7 col-md-5">
-                    <input type="text" class="input-text full-width"
+                    <input type="text" class="input-text full-width" ng-model="mdl.searchText"
                            placeholder="Equipment Name, Part Name, etc.."/>
                 </div>
                 <div class="form-group col-sm-6 col-md-4">
@@ -157,7 +157,7 @@
                         </div>
 
                         <div class="col-xs-6">
-                            <button type="submit" ui-sref="main.search" class="full-width">SEARCH NOW</button>
+                            <button type="submit" ng-click="mdl.search()" class="full-width">SEARCH NOW</button>
                         </div>
                     </div>
                 </div>
