--- a/src/app/views/search/search.html
+++ b/src/app/views/search/search.html
@@ -187,7 +187,7 @@
                     <div ng-show="searchMdl.display=='list'" class="hotel-list listing-style3 hotel">
                         <article class="box" ng-repeat="pro in searchMdl.products track by pro.id">
                             <figure class="col-sm-5 col-md-4">
-                                <a title="" href="ajax/slideshow-popup.html" class="hover-effect popup-gallery">
+                                <a ui-sref="main.equiDetails" class="hover-effect">
                                     <img width="270" height="160" alt="" src="http://placehold.it/270x160">
                                 </a>
                             </figure>
