--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -1,5 +1,168 @@
 <div>
-    <div ui-view="header"></div>
+    <header id="header" class="navbar-static-top style2">
+        <div class="topnav">
+            <div class="container">
+                <nav id="main-menu" role="navigation">
+                    <ul class="menu">
+                        <li class="menu-item-has-children">
+                            <a ui-sref="home">Home</a>
+                        </li>
+                    </ul>
+                </nav>
+                <ul class="quick-menu pull-right clearfix">
+                    <li>
+                        <a class="pointerhover">CART(3 items)</a>
+                    </li>
+                    <li><a ng-click="openSignUp()" class="soap-popupbox">ACCOUNT</a></li>
+
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <h1 class="logo navbar-brand">
+                <a class="pointerhover">
+                    <img src="assets/images/logo.png"  />
+                </a>
+            </h1>
+            <div class="header-search col-sm-offset-4 col-md-offset-2 hidden-mobile">
+                <form method="post" role="form">
+                    <div class="col-xs-6">
+                        <input type="text" name="where" value="" placeholder="Equipment Name, Part Name, etc.." class="input-text white-bg full-width where" />
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="col-xs-3">
+                            <div class="datepicker-wrap transparent" ng-click="mainMdl.open($event,'Start')">
+                                <input type="text" class="input-text white-bg full-width check-in" datepicker-popup="{{dateFormat}}" ng-model="mainMdl.startDate"
+                                       is-open="mainMdl.openedStart" min-date="mainMdl.minDate" datepicker-options="mainMdl.dateOptions"
+                                       ng-focus="mainMdl.open($event,'Start')"
+                                       ng-required="true" close-text="Close"/>
+                            </div>
+                        </div>
+                        <div class="col-xs-3">
+                            <div class="datepicker-wrap transparent" ng-click="mainMdl.open($event,'End')">
+                                <input type="text" class="input-text white-bg full-width check-in" datepicker-popup="{{dateFormat}}" ng-model="mainMdl.endDate"
+                                       is-open="mainMdl.openedEnd" min-date="mainMdl.minDate" datepicker-options="mainMdl.dateOptions"
+                                       ng-focus="mainMdl.open($event,'End')"
+                                       ng-required="true" close-text="Close"/>
+                            </div>
+
+
+                        </div>
+                        <div class="col-xs-3">
+
+                            <select class="form-control full-width white-bg">
+                                <option>Rent</option>
+                                <option>Buy</option>
+                            </select>
+
+                        </div>
+                        <div class="col-xs-3">
+                            <button type="submit" ng-click="mainMdl.search()" class="btn-medium uppercase full-width">search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </header>
     <div ui-view></div>
+
+    <footer id="footer">
+        <div class="footer-wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <h2>Discover</h2>
+                        <ul class="discover triangle hover row">
+                            <li class="col-xs-6"><a href="#">Safety</a></li>
+                            <li class="col-xs-6"><a href="#">About</a></li>
+                            <li class="col-xs-6"><a href="#">Travelo Picks</a></li>
+                            <li class="col-xs-6"><a href="#">Latest Jobs</a></li>
+                            <li class="active col-xs-6"><a href="#">Mobile</a></li>
+                            <li class="col-xs-6"><a href="#">Press Releases</a></li>
+                            <li class="col-xs-6"><a href="#">Why Host</a></li>
+                            <li class="col-xs-6"><a href="#">Blog Posts</a></li>
+                            <li class="col-xs-6"><a href="#">Social Connect</a></li>
+                            <li class="col-xs-6"><a href="#">Help Topics</a></li>
+                            <li class="col-xs-6"><a href="#">Site Map</a></li>
+                            <li class="col-xs-6"><a href="#">Policies</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <h2>Travel News</h2>
+                        <ul class="travel-news">
+                            <li>
+                                <div class="thumb">
+                                    <a href="#">
+                                        <img src="http://placehold.it/63x63" alt="" width="63" height="63" />
+                                    </a>
+                                </div>
+                                <div class="description">
+                                    <h5 class="s-title"><a href="#">Amazing Places</a></h5>
+                                    <p>Purus ac congue arcu cursus ut vitae pulvinar massaidp.</p>
+                                    <span class="date">25 Sep, 2013</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="thumb">
+                                    <a href="#">
+                                        <img src="http://placehold.it/63x63" alt="" width="63" height="63" />
+                                    </a>
+                                </div>
+                                <div class="description">
+                                    <h5 class="s-title"><a href="#">Travel Insurance</a></h5>
+                                    <p>Purus ac congue arcu cursus ut vitae pulvinar massaidp.</p>
+                                    <span class="date">24 Sep, 2013</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <h2>Mailing List</h2>
+                        <p>Sign up for our mailing list to get latest updates and offers.</p>
+                        <br />
+                        <div class="icon-check">
+                            <input type="text" class="input-text full-width" placeholder="your email" />
+                        </div>
+                        <br />
+                        <span>We respect your privacy</span>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <h2>About Travelo</h2>
+                        <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massaidp nequetiam lore elerisque.</p>
+                        <br />
+                        <address class="contact-details">
+                            <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
+                            <br />
+                            <a href="#" class="contact-email">help@travelo.com</a>
+                        </address>
+                        <ul class="social-icons clearfix">
+                            <li class="twitter"><a title="twitter" href="#" data-toggle="tooltip"><i class="soap-icon-twitter"></i></a></li>
+                            <li class="googleplus"><a title="googleplus" href="#" data-toggle="tooltip"><i class="soap-icon-googleplus"></i></a></li>
+                            <li class="facebook"><a title="facebook" href="#" data-toggle="tooltip"><i class="soap-icon-facebook"></i></a></li>
+                            <li class="linkedin"><a title="linkedin" href="#" data-toggle="tooltip"><i class="soap-icon-linkedin"></i></a></li>
+                            <li class="vimeo"><a title="vimeo" href="#" data-toggle="tooltip"><i class="soap-icon-vimeo"></i></a></li>
+                            <li class="dribble"><a title="dribble" href="#" data-toggle="tooltip"><i class="soap-icon-dribble"></i></a></li>
+                            <li class="flickr"><a title="flickr" href="#" data-toggle="tooltip"><i class="soap-icon-flickr"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bottom gray-area">
+            <div class="container">
+                <div class="logo pull-left">
+                    <a href="index.html" title="Travelo - home">
+                        <img src="images/logo.png" alt="Travelo HTML5 Template" />
+                    </a>
+                </div>
+                <div class="pull-right">
+                    <a id="back-to-top" href="#" class="animated" data-animation-type="bounce"><i class="soap-icon-longarrow-up circle"></i></a>
+                </div>
+                <div class="copyright pull-right">
+                    <p>&copy; 2014 Travelo</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 
