--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -64,6 +64,19 @@
             </div>
         </div>
     </header>
+    <div class="page-title-container">
+        <div class="container">
+            <div class="page-title pull-left">
+                <h2 class="entry-title">{{mainMdl.title}}</h2>
+            </div>
+            <ul class="breadcrumbs pull-right">
+                <li><a ui-sref="home">HOME</a></li>
+                <li ng-repeat="bc in mainMdl.breadcrumbs">
+                    {{bc.title}}
+                </li>
+            </ul>
+        </div>
+    </div>
     <div ui-view></div>
 
     <footer id="footer">
