minor CSS and Dollar sign added

--- a/src/app/views/search/search.html
+++ b/src/app/views/search/search.html
@@ -211,9 +211,9 @@
                                 </div>
                                 <div>
                                     <div class="price-slot">
-                                        <span class="price"><small>Daily</small>{{pro.daily_price}}</span>
-                                        <span class="price"><small>Weekly</small>{{pro.weekly_price}}</span>
-                                        <span class="price"><small>Monthly</small>{{pro.monthly_price}}</span>
+                                        <span class="price"><small>Daily</small>${{pro.daily_price}}</span>
+                                        <span class="price"><small>Weekly</small>${{pro.weekly_price}}</span>
+                                        <span class="price"><small>Monthly</small>${{pro.monthly_price}}</span>
                                     </div>
                                     <div>
 
